argocd/namespaces/network/gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: acme
  namespace: network
  annotations:
    argocd.argoproj.io/sync-wave: "20"
spec:
  gatewayClassName: cilium
  addresses:
  - type: IPAddress
    value: 192.168.20.191
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            tls-certificates: http01
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: network
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  gatewayClassName: cilium
  addresses:
  - type: IPAddress
    value: 192.168.20.192
  listeners:
  - name: argocd
    protocol: HTTPS
    port: 443
    hostname: "argocd.yourdomain.example" # todo: adjust to your domain
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: argocd-tls
        namespace: argocd
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            tls-certificates: http01
  - name: keycloak
    protocol: HTTPS
    port: 443
    hostname: "keycloak.yourdomain.example" # todo: adjust to your domain
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: keycloak-tls
        namespace: keycloak
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            tls-certificates: http01
  - name: keycloak-admin
    protocol: HTTPS
    port: 443
    hostname: "keycloak-admin.youdomain.example" # todo: adjust to your domain
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: keycloak-admin-tls
        namespace: keycloak
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            tls-certificates: http01
